--- a/style.css
+++ b/style.css
@@ -1,4 +1,16 @@
 body {
   background-color: #2c302d;
   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.main {
+  width: 1226px;
+  height: 772px;
+  background-color: #bbcdb9;
+  border: 10px solid #628767;
+  border-radius: 20px;
 }
