--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: bold;
+  -webkit-text-stroke: 2px;
+  -webkit-text-stroke-color: black;
 }
 
 .main {
@@ -13,4 +17,16 @@ body {
   background-color: #bbcdb9;
   border: 10px solid #628767;
   border-radius: 20px;
+}
+
+.title {
+  width: 420px;
+  height: 87.55px;
+  background-color: #9fc0aa;
+  border: 3px solid black;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 64px;
 }
