--- a/style.css
+++ b/style.css
@@ -9,9 +9,20 @@ body {
   font-weight: bold;
   -webkit-text-stroke: 2px;
   -webkit-text-stroke-color: black;
+  overflow: hidden;
+  font-size: 3rem;
+}
+
+.mainsect {
+  height: 826px;
+  width: 100%;
 }
 
 .main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   width: 1226px;
   height: 772px;
   background-color: #bbcdb9;
@@ -19,7 +30,15 @@ body {
   border-radius: 20px;
 }
 
-.title {
+.titlesect {
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  width: 100%;
+  height: 400px;
+}
+
+.intitle {
   width: 420px;
   height: 87.55px;
   background-color: #9fc0aa;
@@ -28,5 +47,5 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 64px;
+  font-size: 4rem;
 }
