--- a/style.css
+++ b/style.css
@@ -7,13 +7,14 @@ body {
   height: 100vh;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: bold;
-  -webkit-text-stroke: 2px;
+  -webkit-text-stroke: 1.2px;
   -webkit-text-stroke-color: black;
   overflow: hidden;
-  font-size: 3rem;
+  font-size: 2rem;
 }
 
 .mainsect {
+  margin-top: 65px;
   height: 826px;
   width: 100%;
 }
@@ -48,4 +49,25 @@ body {
   align-items: center;
   justify-content: center;
   font-size: 4rem;
+}
+
+.inquestion {
+  background-color: white;
+  width: 407px;
+  height: 141px;
+  border: 2px solid black;
+  border-radius: 5px;
+  padding: 10px;
+  text-align: center;
+}
+
+.question {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 448px;
+  height: 174px;
+  background-color: #cce7ec;
+  border: 2px solid black;
+  border-radius: 5px;
 }
