--- a/style.css
+++ b/style.css
@@ -1,20 +1,26 @@
+* {
+  margin: 0;
+  color: white;
+}
+
 body {
   background-color: #2c302d;
-  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Fredoka", serif;
   font-weight: bold;
-  -webkit-text-stroke: 1.2px;
-  -webkit-text-stroke-color: black;
   overflow: hidden;
-  font-size: 2rem;
+  font-size: 1.7rem;
 }
 
 .mainsect {
-  margin-top: 65px;
+  display: flex;
+  flex-direction: column;
+  margin: 30px;
+  justify-content: center;
+  align-items: center;
   height: 826px;
   width: 100%;
 }
@@ -52,12 +58,14 @@ body {
 }
 
 .inquestion {
-  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  background-color: rgb(153, 199, 199);
   width: 407px;
   height: 141px;
   border: 2px solid black;
   border-radius: 5px;
-  padding: 10px;
   text-align: center;
 }
 
@@ -69,5 +77,64 @@ body {
   height: 174px;
   background-color: #cce7ec;
   border: 2px solid black;
+  border-radius: 5px;
+}
+
+.hints {
+  font-size: 1.2rem;
+}
+
+hr {
+  border: none;
+  background-color: black;
+  height: 2px;
+}
+
+.submit {
+  width: 448px;
+  height: 88px;
+  background-color: #cce7ec;
+  border: 2px solid black;
+  border-radius: 5px;
+}
+
+.insubmit {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.textSubmit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  border: 2px solid black;
+  border-radius: 5px;
+  width: 283px;
+  height: 60px;
+}
+
+input[type="text"] {
+  width: 90%;
+  height: 80%;
+  border: none;
+  text-align: center;
+  color: black;
+  text-transform: uppercase;
+  font-size: 2rem;
+}
+
+input[type="text"]:focus {
+  border: none;
+  outline: none;
+}
+
+input[type="submit"] {
+  background-color: #b6ffb6;
+  border: 3px solid #3d7a4f;
+  width: 133px;
+  height: 60px;
   border-radius: 5px;
 }
