--- a/style.css
+++ b/style.css
@@ -100,9 +100,9 @@ hr {
 
 .insubmit {
   display: flex;
-  flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  height: 100%;
 }
 
 .textSubmit {
@@ -132,6 +132,10 @@ input[type="text"]:focus {
 }
 
 input[type="submit"] {
+  text-align: center;
+  font-family: "Fredoka", serif;
+  font-size: 2.3rem;
+  font-weight: bold;
   background-color: #b6ffb6;
   border: 3px solid #3d7a4f;
   width: 133px;
