--- a/style.css
+++ b/style.css
@@ -16,6 +16,17 @@ body {
   font-size: 1.7rem;
 }
 
+.startScreen {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 1126px;
+  height: 672px;
+  background-color: #bbcdb9;
+  position: absolute;
+  z-index: 100;
+}
+
 .mainsect {
   display: flex;
   flex-direction: column;
@@ -150,11 +161,12 @@ input[type="text"]:focus {
 input[type="submit"] {
   text-align: center;
   font-family: "Fredoka", serif;
-  font-size: 2.3rem;
+  font-size: 2rem;
   font-weight: bold;
   background-color: #b6ffb6;
   border: 3px solid #3d7a4f;
   width: 133px;
   height: 60px;
   border-radius: 5px;
+  cursor: pointer;
 }
