--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   width: 1126px;
   height: 672px;
   background-color: #bbcdb9;
