--- a/style.css
+++ b/style.css
@@ -128,6 +128,12 @@ hr {
   margin-bottom: 10px;
 }
 
+.Vastausalue {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .submit {
   width: 448px;
   height: 88px;
