--- a/style.css
+++ b/style.css
@@ -32,10 +32,11 @@ body {
   display: flex;
   flex-direction: row;
   margin: 30px 10px;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   height: 826px;
   width: 80%;
+  gap: 100px;
 }
 
 .main {
@@ -74,7 +75,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  background-color: rgb(153, 199, 199);
+  background-color: #aedce4;
   width: 407px;
   height: 101px;
   border: 2px solid black;
@@ -101,6 +102,37 @@ body {
 
 .counters {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.count {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #cce7ec;
+  border: 2px solid black;
+  border-radius: 5px;
+  width: 229px;
+  height: 76px;
+  font-size: 2rem;
+}
+
+.incount {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #aedce4;
+  border: 2px solid black;
+  border-radius: 5px;
+  width: 179px;
+  height: 63px;
+}
+
+.healthcounter {
+  display: flex;
   justify-content: center;
   align-items: center;
   background-color: #cce7ec;
@@ -110,12 +142,13 @@ body {
   height: 76px;
 }
 
-.incount {
+.inhealthcounter {
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  background-color: rgb(153, 199, 199);
+  justify-content: center;
+  align-items: center;
+  background-color: #aedce4;
   border: 2px solid black;
+  border-radius: 5px;
   width: 179px;
   height: 63px;
 }
