--- a/style.css
+++ b/style.css
@@ -286,11 +286,51 @@ input[type="submit"] {
   animation: appear 1s ease-in-out;
 }
 
+input[type="submit"]:hover {
+  animation: shake 1s infinite;
+}
+
 @keyframes appear {
   0% {
     opacity: 0;
   }
   100% {
     opacity: 1;
+  }
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(0.1px, 0.1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-0.1px, -0.2px) rotate(-0.1deg);
+  }
+  20% {
+    transform: translate(-0.3px, 0px) rotate(0.1deg);
+  }
+  30% {
+    transform: translate(0.3px, 0.2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(0.1px, -0.1px) rotate(0.1deg);
+  }
+  50% {
+    transform: translate(-0.1px, 0.2px) rotate(-0.1deg);
+  }
+  60% {
+    transform: translate(-0.3px, 0.1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(0.3px, 0.1px) rotate(-0.1deg);
+  }
+  80% {
+    transform: translate(-0.1px, -0.1px) rotate(0.1deg);
+  }
+  90% {
+    transform: translate(0.1px, 0.2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(0.1px, -0.2px) rotate(-0.1deg);
   }
 }
