--- a/style.css
+++ b/style.css
@@ -29,6 +29,36 @@ body {
   z-index: 100;
 }
 
+.TheEnd {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+
+  position: absolute;
+  z-index: 1000;
+}
+
+.win {
+  background: linear-gradient(
+    0deg,
+    rgb(163, 255, 221),
+    rgb(155, 255, 155),
+    rgb(156, 255, 219)
+  );
+}
+
+.loose {
+  background: linear-gradient(
+    0deg,
+    rgb(255, 104, 49),
+    rgb(255, 48, 48),
+    rgb(255, 171, 45)
+  );
+}
+
 .mainsect {
   display: flex;
   flex-direction: row;
@@ -173,7 +203,7 @@ body {
   width: 448px;
   height: 88px;
   color: white;
-  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .inwrong {
@@ -198,7 +228,7 @@ body {
   width: 448px;
   height: 88px;
   color: white;
-  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .insidecorrect {
