--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 1126px;
+  width: 1156px;
   height: 672px;
   background-color: #bbcdb9;
   position: absolute;
@@ -64,9 +64,10 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 226px;
+  height: 256px;
   width: 80%;
   gap: 10px;
+  margin-top: 150px;
 }
 
 .main {
@@ -80,18 +81,8 @@ body {
   border: 10px solid #628767;
   border-radius: 20px;
 }
-
-.titlesect {
-  display: flex;
-  align-items: end;
-  justify-content: center;
-  width: 100%;
-  height: 100px;
-  margin-bottom: 100px;
-}
-
 .intitle {
-  width: 420px;
+  width: 650px;
   height: 87.55px;
   background-color: #9fc0aa;
   border: 3px solid black;
@@ -134,11 +125,17 @@ body {
 
 .counters {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: start;
   align-items: center;
   gap: 20px;
+  width: 1150px;
   font-size: 3rem;
+  height: 100px;
+}
+
+.counters:last-child {
+  left: 0;
 }
 
 .count {
