--- a/style.css
+++ b/style.css
@@ -83,8 +83,9 @@ body {
 
 .titlesect {
   display: flex;
-  align-items: end;
-  justify-content: center;
+  align-items: normal;
+  justify-content: space-evenly;
+  flex-direction: column;
   width: 100%;
   height: 100px;
   margin-bottom: 100px;
