--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
   justify-content: center;
   flex-direction: column;
   width: 1156px;
-  height: 672px;
+  height: 700px;
   background-color: #bbcdb9;
   position: absolute;
   z-index: 100;
@@ -281,6 +281,17 @@ hr {
   justify-content: center;
   align-items: center;
   background-color: white;
+  border: 2px solid black;
+  border-radius: 5px;
+  width: 283px;
+  height: 60px;
+}
+
+.creators {
+  background-color: #c4eac2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border: 2px solid black;
   border-radius: 5px;
   width: 283px;
